--- a/usher-common/usher-common-service/src/main/resources/application.yml
+++ b/usher-common/usher-common-service/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   profiles:
     active: dev
+
 nacos:
   config:
     bootstrap:
@@ -13,7 +14,7 @@ nacos:
     # 配置文件类型,对应nacos配置页面的配置格式，默认是properties
     type: yaml
     # nacos服务器地址
-    server-addr: nacos.uhyils.top
+    server-addr: nacos.uhyils:80
     # 开启自动刷新nacos配置
     auto-refresh: true
     # 针对配置项同名的情况，是否允许nacos的配置覆盖本地的配置
@@ -25,5 +26,22 @@ nacos:
       - data-id: global-common #新建的配置，名称需要完全对应上
         # group: DEFAULT_GROUP
         auto-refresh: true  # 动态刷新配置
+        # 子公共配置空间
+        namespace: 4daf752d-4310-45cf-a9d9-1d1c785a5f54
         # 配置文件类型,对应nacos配置页面的配置格式，默认是properties
+        type: yaml
+
+      - data-id: rpc-config
+        auto-refresh: true
+        namespace: 4daf752d-4310-45cf-a9d9-1d1c785a5f54
+        type: yaml
+
+      - data-id: cache-config
+        auto-refresh: true
+        namespace: 4daf752d-4310-45cf-a9d9-1d1c785a5f54
+        type: yaml
+
+      - data-id: mq-config
+        auto-refresh: true
+        namespace: 4daf752d-4310-45cf-a9d9-1d1c785a5f54
         type: yaml
